--- a/public/offline.html
+++ b/public/offline.html
@@ -18,7 +18,7 @@
 				justify-content: center;
 			}
 
-			.city {
+			.holder {
 				align-items: center;
 				width: 80%;
 				display: flex;
@@ -29,15 +29,15 @@
 				background: #fff;
 			}
 
-			.city-name {
+			.holder-name {
 				font-size: 2em;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="city">
-			<h2 class="city-name">
-				<span>Please go online to check the current weather.</span>
+		<div class="holder">
+			<h2 class="holder-name">
+				<span>Please go online to use the app.</span>
 			</h2>
 		</div>
 	</body>
