--- a/public/offline.html
+++ b/public/offline.html
@@ -16,6 +16,7 @@
 				align-items: center;
 				text-align: center;
 				justify-content: center;
+				font-family: sans-serif;
 			}
 
 			.holder {
