--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
 
 			gtag("config", "UA-141921777-1");
 		</script>
+		<script
+			data-ad-client="ca-pub-6672366590088540"
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+		></script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/logo512.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
